--- a/blog.html
+++ b/blog.html
@@ -66,6 +66,26 @@
           </div>
         </div>
       </div>
+      <div class="page__our-blog">
+        <div class="our-blog__container container">
+          <div class="our-blog__contakt contakt-body">
+            <div class="contakt-body__img">
+              <img src="./img/our-blog/Image-1.png" alt="">
+            </div>
+            <div class="contakt-body__body">
+              <div class="contakt-body__title">
+                <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h3>
+              </div>
+              <div class="contakt-body__subtitle1">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here  Read More....</p>
+              </div>
+              <div class="contakt-body__subtitle2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae labore officiis porro dicta adipisci</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </div>
 </body>
